@@ -146,7 +146,7 @@ StreamListener.prototype.onDetermineCharset = function onDetermineCharset(
             loader.channel.contentCharset = match[1];
             return match[1];
         } else {
-            return "UTF-8";
+            return "utf-8";
         }
     }
 };
